--- a/OnlineJudge/problems/templates/problems/problem_detail.html
+++ b/OnlineJudge/problems/templates/problems/problem_detail.html
@@ -57,6 +57,7 @@
           id="inputArea"
           placeholder="Your input..."
           class="io-text"
+          style="color: black"
         ></textarea>
       </div>
       <div class="io-box">
@@ -65,6 +66,7 @@
           id="outputArea"
           placeholder="Your output..."
           class="io-text"
+          style="color: black"
           readonly
         ></textarea>
       </div>
