--- a/OnlineJudge/problems/templates/problems/problem_detail.html
+++ b/OnlineJudge/problems/templates/problems/problem_detail.html
@@ -75,10 +75,13 @@
 </div>
 <div id="ai-review-modal" style="display: none"></div>
 <script>
-  window.problemId = {{ problem.id }};
+  window.problemId = `{{ problem.id }}`;
+  window.latestCode = `{{ latest_code|escapejs }}`;
+  window.latestLang = `{{ latest_lang }}`;
 </script>
-<script src="{%static 'problems/js/editor.js' %}"></script>
+<script src="{% static 'problems/js/editor.js' %}"></script>
 <script src="{% static 'ai/js/ai.js' %}"></script>
+<!-- <script src="{% static 'problems/js/boilerplates.js' %}"></script> -->
 <div id="ai-review-modal" style="display: none"></div>
 
 {% endblock %}
