--- a/OnlineJudge/home/templates/base1.html
+++ b/OnlineJudge/home/templates/base1.html
@@ -43,6 +43,18 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <!-- Toastr CSS -->
+    <!-- jQuery (required) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <!-- Toastr CSS -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Toastr JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   </head>
   <body>
     {% include 'navbar.html' %}
@@ -54,3 +66,34 @@
     </div>
   </body>
 </html>
+<script>
+  if (typeof toastr !== "undefined") {
+    toastr.options = {
+      closeButton: true,
+      progressBar: true,
+      positionClass: "toast-bottom-right",
+      timeOut: 3000,
+    };
+  }
+</script>
+<style>
+  /* Make toast fully visible */
+  #toast-container > .toast {
+    background-color: #333 !important; /* Dark bg */
+    color: #fff !important; /* White text */
+    opacity: 1 !important; /* No transparency */
+  }
+  #toast-container > .toast-success {
+    background-color: #28a745 !important;
+  }
+  #toast-container > .toast-error {
+    background-color: #dc3545 !important;
+  }
+  #toast-container > .toast-info {
+    background-color: #17a2b8 !important;
+  }
+  #toast-container > .toast-warning {
+    background-color: #ffc107 !important;
+    color: #000 !important;
+  }
+</style>
