--- a/OnlineJudge/problems/templates/problems/problem_detail.html
+++ b/OnlineJudge/problems/templates/problems/problem_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base1.html' %} {% block content %} {% load static %}
-<link rel="stylesheet" href="{% static 'problems/css/problem_detail.css' %}" />
 <link rel="stylesheet" href="{% static 'ai/css/ai_popup.css' %}" />
+<link rel="stylesheet" href="{% static 'problems/css/problem_detail.css' %}" />
 <div class="problem-container">
   <div class="problem-left">
     <h2>{{ problem.problem_name }}</h2>
@@ -50,23 +50,37 @@
     </div>
 
     <!-- Input/Output -->
-    <div class="io-section-vertical">
-      <div class="io-box">
-        <h4>Input</h4>
+    <div class="io-section bg-black-700 text-white rounded-xl shadow-lg">
+      <!-- Tabs -->
+      <div class="flex border-b border-gray-700">
+        <button
+          id="tab-input"
+          class="tab-btn px-4 py-2 text-sm font-medium border-b-2"
+        >
+          Input
+        </button>
+        <button
+          id="tab-output"
+          class="tab-btn px-4 py-2 text-sm font-medium text-gray-400 hover:text-white"
+        >
+          Output
+        </button>
+      </div>
+
+      <!-- Tab Contents -->
+      <div id="input-tab" class="tab-content p-3">
         <textarea
           id="inputArea"
           placeholder="Your input..."
-          class="io-text"
-          style="color: black"
+          class="w-full h-40 p-2 rounded bg-gray-800 text-white border border-gray-700 focus:outline-none"
         ></textarea>
       </div>
-      <div class="io-box">
-        <h4>Output</h4>
+
+      <div id="output-tab" class="tab-content p-3 hidden">
         <textarea
           id="outputArea"
           placeholder="Your output..."
-          class="io-text"
-          style="color: black"
+          class="w-full h-40 p-2 rounded bg-gray-800 text-white border border-gray-700 focus:outline-none"
           readonly
         ></textarea>
       </div>
