--- a/OnlineJudge/problems/templates/problems/problem_detail.html
+++ b/OnlineJudge/problems/templates/problems/problem_detail.html
@@ -68,19 +68,19 @@
       </div>
 
       <!-- Tab Contents -->
-      <div id="input-tab" class="tab-content p-3">
+      <div id="input-tab" class="tab-content">
         <textarea
           id="inputArea"
           placeholder="Your input..."
-          class="w-full h-40 p-2 rounded bg-gray-800 text-white border border-gray-700 focus:outline-none"
+          class="w-full h-40 p-2 rounded bg-dark text-white focus:outline-none border-none"
         ></textarea>
       </div>
 
-      <div id="output-tab" class="tab-content p-3 hidden">
+      <div id="output-tab" class="tab-content hidden">
         <textarea
           id="outputArea"
           placeholder="Your output..."
-          class="w-full h-40 p-2 rounded bg-gray-800 text-white border border-gray-700 focus:outline-none"
+          class="w-full h-40 p-2 rounded bg-dark text-white border-none focus:outline-none"
           readonly
         ></textarea>
       </div>
